--- a/Divar/Views/Comment/Index.cshtml
+++ b/Divar/Views/Comment/Index.cshtml
@@ -22,5 +22,6 @@
 </table>
 
 <div class="button-container">
+    <a asp-action="Index" asp-controller="Home" class="btn btn-secondary">انصراف</a>
     <a class="button" asp-action="Create" asp-controller="Comment">اضافه کردن کامنت جدید</a>
 </div>
