--- a/Divar/Views/User/Login.cshtml
+++ b/Divar/Views/User/Login.cshtml
@@ -7,12 +7,12 @@
 <form asp-action="Login" method="post" class="form-center">
     <div asp-validation-summary="All" class="text-danger"></div>
     <div class="form-group label-group">
-        <label asp-for="Email"></label>
+        <label asp-for="Email">ایمیل</label>
         <input asp-for="Email" class="form-control input-large" />
         <span asp-validation-for="Email" class="text-danger"></span>
     </div>
     <div class="form-group label-group">
-        <label asp-for="Password"></label>
+        <label asp-for="Password">پسورد</label>
         <input asp-for="Password" class="form-control input-large" />
         <span asp-validation-for="Password" class="text-danger"></span>
     </div>
