--- a/Divar/Views/Home/Edit.cshtml
+++ b/Divar/Views/Home/Edit.cshtml
@@ -1,121 +1,154 @@
 ﻿@model Divar.Models.Advertisement
 
 <html dir="rtl">
+<head>
+    <style>
+        .form-center {
+            max-width: 600px;
+            margin: auto;
+            text-align: center;
+        }
 
-<h2 class="text-center">ویرایش آگهی</h2>
+        .input-large {
+            width: 100%;
+            height: 100%;
+            margin: 10px auto;
+            max-width: 800px;
+        }
 
-<form asp-action="Edit" method="post" class="form-center">
-    <input type="hidden" asp-for="Id" />
-    <div class="form-group">
-        <label asp-for="Title" class="text-center">تیتر</label>
-        <input asp-for="Title" class="form-control input-large" />
-        <span asp-validation-for="Title" class="text-danger"></span>
-    </div>
-    <div class="form-group">
-        <label asp-for="Content" class="text-center">محتوای آگهی</label>
-        <textarea asp-for="Content" class="form-control input-large"></textarea>
-        <span asp-validation-for="Content" class="text-danger"></span>
-    </div>
-    <div class="form-group">
-        <label asp-for="Price" class="text-center">قیمت</label>
-        <input asp-for="Price" class="form-control input-large" type="number" />
-        <span asp-validation-for="Price" class="text-danger"></span>
-    </div>
-    <div class="form-group">
-        <label asp-for="ImageUrl" class="text-center">لینک تصویر</label>
-        <input asp-for="ImageUrl" class="form-control input-large" />
-        <span asp-validation-for="ImageUrl" class="text-danger"></span>
-    </div>
-    <div class="form-group">
-        <label asp-for="ImageUrl2" class="text-center">لینک تصویر 2</label>
-        <input asp-for="ImageUrl2" class="form-control input-large" />
-        <span asp-validation-for="ImageUrl2" class="text-danger"></span>
-    </div>
-    <div class="form-group">
-        <label asp-for="ImageUrl3" class="text-center">لینک تصویر 3</label>
-        <input asp-for="ImageUrl3" class="form-control input-large" />
-        <span asp-validation-for="ImageUrl3" class="text-danger"></span>
+        .form-check {
+            text-align: center;
+        }
+
+        .loader {
+            display: none;
+            position: fixed;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            background-color: rgba(255, 255, 255, 0.8);
+            z-index: 1000;
+            align-items: center;
+            justify-content: center;
+        }
+
+            .loader .spinner {
+                text-align: center;
+                font-size: 1.5em;
+                color: #333;
+            }
+    </style>
+</head>
+<body>
+
+    <div class="loader" id="loader">
+        <div class="spinner">در حال بارگذاری...</div>
     </div>
 
-    @if (Model.Category == Divar.Models.CategoryType.کتاب)
-    {
+    <h2 class="text-center">ویرایش آگهی</h2>
+
+    <form asp-action="Edit" method="post" class="form-center" onsubmit="showLoader()">
+        <input type="hidden" asp-for="Id" />
         <div class="form-group">
-            <label asp-for="BookAuthor" class="text-center">نویسنده کتاب</label>
-            <input asp-for="BookAuthor" class="form-control input-large" />
-            <span asp-validation-for="BookAuthor" class="text-danger"></span>
-        </div>
-    }
-    @if (Model.Category == Divar.Models.CategoryType.خانه)
-    {
-        <div class="form-group">
-            <label asp-for="HomeSize" class="text-center">اندازه خانه</label>
-            <input asp-for="HomeSize" class="form-control input-large" />
-            <span asp-validation-for="HomeSize" class="text-danger"></span>
+            <label asp-for="Title" class="text-center">تیتر</label>
+            <input asp-for="Title" class="form-control input-large" />
+            <span asp-validation-for="Title" class="text-danger"></span>
         </div>
         <div class="form-group">
-            <label asp-for="HomeAddress" class="text-center">آدرس خانه</label>
-            <input asp-for="HomeAddress" class="form-control input-large" />
-            <span asp-validation-for="HomeAddress" class="text-danger"></span>
-        </div>
-    }
-    @if (Model.Category == Divar.Models.CategoryType.موبایل)
-    {
-        <div class="form-group">
-            <label asp-for="MobileBrand" class="text-center">برند موبایل</label>
-            <input asp-for="MobileBrand" class="form-control input-large" />
-            <span asp-validation-for="MobileBrand" class="text-danger"></span>
+            <label asp-for="Content" class="text-center">محتوای آگهی</label>
+            <textarea asp-for="Content" class="form-control input-large"></textarea>
+            <span asp-validation-for="Content" class="text-danger"></span>
         </div>
         <div class="form-group">
-            <label asp-for="SimCardsNumber" class="text-center">تعداد سیم‌کارت‌ها</label>
-            <input asp-for="SimCardsNumber" class="form-control input-large" />
-            <span asp-validation-for="SimCardsNumber" class="text-danger"></span>
+            <label asp-for="Price" class="text-center">قیمت</label>
+            <input asp-for="Price" class="form-control input-large" type="number" />
+            <span asp-validation-for="Price" class="text-danger"></span>
         </div>
-    }
-    @if (Model.Category == Divar.Models.CategoryType.ماشین)
-    {
         <div class="form-group">
-            <label asp-for="CarBrand" class="text-center">برند ماشین</label>
-            <input asp-for="CarBrand" class="form-control input-large" />
-            <span asp-validation-for="CarBrand" class="text-danger"></span>
+            <label asp-for="ImageUrl" class="text-center">لینک تصویر</label>
+            <input asp-for="ImageUrl" class="form-control input-large" />
+            <span asp-validation-for="ImageUrl" class="text-danger"></span>
         </div>
-        <div class="form-group text-right">
-            <label class="text-center">نوع گیربکس</label>
-            <div class="form-check d-inline-flex align-items-center justify-content-center">
-                <label class="form-check-label" for="automatic" style="margin-right: 5px;">اتوماتیک</label>
-                <input class="form-check-input" type="radio" asp-for="GearboxType" value="true" id="automatic" style="margin-left: 5px;" />
+        <div class="form-group">
+            <label asp-for="ImageUrl2" class="text-center">لینک تصویر 2</label>
+            <input asp-for="ImageUrl2" class="form-control input-large" />
+            <span asp-validation-for="ImageUrl2" class="text-danger"></span>
+        </div>
+        <div class="form-group">
+            <label asp-for="ImageUrl3" class="text-center">لینک تصویر 3</label>
+            <input asp-for="ImageUrl3" class="form-control input-large" />
+            <span asp-validation-for="ImageUrl3" class="text-danger"></span>
+        </div>
+
+        @if (Model.Category == Divar.Models.CategoryType.کتاب)
+        {
+            <div class="form-group">
+                <label asp-for="BookAuthor" class="text-center">نویسنده کتاب</label>
+                <input asp-for="BookAuthor" class="form-control input-large" />
+                <span asp-validation-for="BookAuthor" class="text-danger"></span>
             </div>
-            <div class="form-check d-inline-flex align-items-center justify-content-center">
-                <label class="form-check-label" for="manual" style="margin-right: 5px;">دنده‌ای</label>
-                <input class="form-check-input" type="radio" asp-for="GearboxType" value="false" id="manual" style="margin-left: 5px;" />
+        }
+        @if (Model.Category == Divar.Models.CategoryType.خانه)
+        {
+            <div class="form-group">
+                <label asp-for="HomeSize" class="text-center">اندازه خانه</label>
+                <input asp-for="HomeSize" class="form-control input-large" />
+                <span asp-validation-for="HomeSize" class="text-danger"></span>
             </div>
-            <span asp-validation-for="GearboxType" class="text-danger"></span>
+            <div class="form-group">
+                <label asp-for="HomeAddress" class="text-center">آدرس خانه</label>
+                <input asp-for="HomeAddress" class="form-control input-large" />
+                <span asp-validation-for="HomeAddress" class="text-danger"></span>
+            </div>
+        }
+        @if (Model.Category == Divar.Models.CategoryType.موبایل)
+        {
+            <div class="form-group">
+                <label asp-for="MobileBrand" class="text-center">برند موبایل</label>
+                <input asp-for="MobileBrand" class="form-control input-large" />
+                <span asp-validation-for="MobileBrand" class="text-danger"></span>
+            </div>
+            <div class="form-group">
+                <label asp-for="SimCardsNumber" class="text-center">تعداد سیم‌کارت‌ها</label>
+                <input asp-for="SimCardsNumber" class="form-control input-large" />
+                <span asp-validation-for="SimCardsNumber" class="text-danger"></span>
+            </div>
+        }
+        @if (Model.Category == Divar.Models.CategoryType.ماشین)
+        {
+            <div class="form-group">
+                <label asp-for="CarBrand" class="text-center">برند ماشین</label>
+                <input asp-for="CarBrand" class="form-control input-large" />
+                <span asp-validation-for="CarBrand" class="text-danger"></span>
+            </div>
+            <div class="form-group text-right">
+                <label class="text-center">نوع گیربکس</label>
+                <div class="form-check d-inline-flex align-items-center justify-content-center">
+                    <label class="form-check-label" for="automatic" style="margin-right: 5px;">اتوماتیک</label>
+                    <input class="form-check-input" type="radio" asp-for="GearboxType" value="true" id="automatic" style="margin-left: 5px;" />
+                </div>
+                <div class="form-check d-inline-flex align-items-center justify-content-center">
+                    <label class="form-check-label" for="manual" style="margin-right: 5px;">دنده‌ای</label>
+                    <input class="form-check-input" type="radio" asp-for="GearboxType" value="false" id="manual" style="margin-left: 5px;" />
+                </div>
+                <span asp-validation-for="GearboxType" class="text-danger"></span>
+            </div>
+        }
+        <br />
+        <div class="text-center">
+            <button type="submit" class="btn btn-primary">ذخیره</button>
+            <a asp-action="Index" class="btn btn-secondary">انصراف</a>
+
         </div>
-    }
-    <br />
-    <div class="text-center">
-        <button type="submit" class="btn btn-primary">ذخیره</button>
-        <a asp-action="Index" class="btn btn-secondary">انصراف</a>
+    </form>
 
-    </div>
-</form>
+    <script>
+        function showLoader() {
+            const loader = document.getElementById('loader');
+            loader.style.display = 'flex'; // نمایش لودر
+        }
+    </script>
 
-<style>
-    .form-center {
-        max-width: 600px;
-        margin: auto;
-        text-align: center;
-    }
-
-    .input-large {
-        width: 100%; /* یا 90٪ */
-        height: 100%; /* ارتفاع افزایش یافته */
-        margin: 10px auto;
-        max-width: 800px; /* حداکثر عرض افزایش یافته */
-    }
-
-    .form-check {
-        text-align: center;
-    }
-</style>
-
+</body>
 </html>
