--- a/Divar/Views/Home/Detail.cshtml
+++ b/Divar/Views/Home/Detail.cshtml
@@ -63,7 +63,7 @@
         }
         @if (@Model.HomeSize.HasValue)
         {
-            <h6 style="text-align: center"><b>متراژ خانه:</b> @Model.HomeSize</h6>
+            <h6 style="text-align: center"><b>متراژ خانه:</b> @Model.HomeSize متر</h6>
         }
         @if (!string.IsNullOrEmpty(@Model.HomeAddress))
         {
