delete comment ui update

--- a/Divar/Views/Admin/Index.cshtml
+++ b/Divar/Views/Admin/Index.cshtml
@@ -194,7 +194,7 @@
                 <th>Id</th>
                 <th>محتوای کامنت</th>
                 <th> تاریخ انتشار</th>
-                <th>عملیات</th> <!-- ستون جدید برای عملیات -->
+                <th>حذف </th> <!-- ستون جدید برای عملیات -->
             </tr>
         </thead>
         <tbody>
