--- a/Divar/Views/Shared/_Layout.cshtml
+++ b/Divar/Views/Shared/_Layout.cshtml
@@ -74,6 +74,10 @@
                     {
                     <li> <a asp-action="SelectCategory" asp-controller="Home">ثبت اگهی</a></li>
                     }
+                    else
+                    {
+                    <li><a asp-action="Login" asp-controller="user"> ثبت اگهی</a></li>
+                    }
                </li>
 
             </ul>
