--- a/Divar/Views/Admin/Index.cshtml
+++ b/Divar/Views/Admin/Index.cshtml
@@ -14,6 +14,8 @@
     <!-- دکمه‌ها برای اسکرول -->
     <button onclick="scrollToSection('users')">لیست کاربران</button>
     <button onclick="scrollToSection('comments')"> لیست کامنت‌ها</button>
+    <button> <a asp-action="Create" asp-controller="Home" style="text-decoration: none"> افزودن آگهی جدید</a>  ‌</button>
+
 </div>
 
 <div id="ads">
@@ -27,7 +29,7 @@
                         <table class="table table-sm">
                             <thead>
                                 <tr>
-                                    <th>Id</th>
+                                    <th>برای مشاهد اگهی روی کلیک کنید  Id</th>
                                     <th>تیتر</th>
                                     <th>محتوا</th>
                                     <th>عکس</th>
@@ -41,7 +43,10 @@
                                 @foreach (var ad in Model.Advertisements.Where(a => a.Category == CategoryType.کتاب))
                                 {
                                     <tr>
-                                        <td>@ad.Id</td>
+                                        <td>
+                                            <a href="@Url.Action("AdvertisementDetail", new { id = ad.Id })">@ad.Id</a>
+                                        </td>
+
                                         <td>@ad.Title</td>
                                         <td>@ad.Content</td>
                                         <td><img src="@ad.ImageUrl" alt="Ad Image" style="width: 50px; height: 50px;" /></td>
@@ -61,7 +66,7 @@
                         <table class="table table-sm">
                             <thead>
                                 <tr>
-                                    <th>Id</th>
+                                    <th>برای مشاهد اگهی روی کلیک کنید  Id</th>
                                     <th>تیتر</th>
                                     <th>محتوای اگهی</th>
                                     <th>عکس</th>
@@ -77,7 +82,10 @@
                                 @foreach (var ad in Model.Advertisements.Where(a => a.Category == CategoryType.خانه))
                                 {
                                     <tr>
-                                        <td>@ad.Id</td>
+                                        <td>
+                                            <a href="@Url.Action("AdvertisementDetail", new { id = ad.Id })">@ad.Id</a>
+                                        </td>
+
                                         <td>@ad.Title</td>
                                         <td>@ad.Content</td>
                                         <td><img src="@ad.ImageUrl" alt="Ad Image" style="width: 50px; height: 50px;" /></td>
@@ -99,7 +107,7 @@
                         <table class="table table-sm">
                             <thead>
                                 <tr>
-                                    <th>Id</th>
+                                    <th>برای مشاهد اگهی روی کلیک کنید  Id</th>
                                     <th>تیتر</th>
                                     <th>محتوای اگهی</th>
                                     <th>عکس</th>
@@ -115,7 +123,11 @@
                                 @foreach (var ad in Model.Advertisements.Where(a => a.Category == CategoryType.موبایل))
                                 {
                                     <tr>
-                                        <td>@ad.Id</td>
+
+                                        <td>
+                                            <a href="@Url.Action("AdvertisementDetail", new { id = ad.Id })">@ad.Id</a>
+                                        </td>
+
                                         <td>@ad.Title</td>
                                         <td>@ad.Content</td>
                                         <td><img src="@ad.ImageUrl" alt="Ad Image" style="width: 50px; height: 50px;" /></td>
@@ -137,7 +149,7 @@
                         <table class="table table-sm">
                             <thead>
                                 <tr>
-                                    <th>Id</th>
+                                    <th>برای مشاهد اگهی روی کلیک کنید  Id</th>
                                     <th>تیتر</th>
                                     <th>محتوای اگهی</th>
                                     <th>عکس</th>
@@ -153,14 +165,17 @@
                                 @foreach (var ad in Model.Advertisements.Where(a => a.Category == CategoryType.ماشین))
                                 {
                                     <tr>
-                                        <td>@ad.Id</td>
+                                        <td>
+                                            <a href="@Url.Action("AdvertisementDetail", new { id = ad.Id })">@ad.Id</a>
+                                        </td>
+
                                         <td>@ad.Title</td>
                                         <td>@ad.Content</td>
                                         <td><img src="@ad.ImageUrl" alt="Ad Image" style="width: 50px; height: 50px;" /></td>
                                         <td>@ad.Price</td>
                                         <td>@ad.CreatedDate</td>
                                         <td>@ad.CarBrand</td>
-                                        <td>@(ad.GearboxType.GetValueOrDefault() ? "اتوماتیک" : "دنده‌ای")</td> 
+                                        <td>@(ad.GearboxType.GetValueOrDefault() ? "اتوماتیک" : "دنده‌ای")</td>
                                         <td>@ad.CustomUser.FirstName  @ad.CustomUser.LastName</td>
 
                                     </tr>
@@ -187,6 +202,8 @@
         <!-- دکمه‌ها برای اسکرول -->
         <button onclick="scrollToSection('ads')">لیست آگهی‌ها</button>
         <button onclick="scrollToSection('users')">لیست کاربران</button>
+        <button> <a asp-action="Create" asp-controller="Comment" style="text-decoration: none">افزودن کامنت</a></button>
+
     </div>
     <table class="table table-sm">
         <thead>
